Financeiro/main/default/objects/Estimado__c/Estimado__c.object-meta.xml
<CustomObject>
    <label>Estimado</label>
    <nameField>
        <label>Nome de Estimado</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Estimado</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>