Financeiro/main/default/objects/Estimado__c/fields/Agrupador__c.field-meta.xml
<CustomField>
    <fullName>Agrupador__c</fullName>
    <label>Agrupador</label>
    <referenceTo>Agrupador__c</referenceTo>
    <relationshipLabel>Estimado</relationshipLabel>
    <relationshipName>Estimado</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>