Financeiro/main/default/objects/Estimado__c/fields/Data_final__c.field-meta.xml
<CustomField>
    <fullName>Data_final__c</fullName>
    <label>Data final</label>
    <type>Date</type>
</CustomField>