Financeiro/main/default/objects/Estimado__c/fields/Data_inicial__c.field-meta.xml
<CustomField>
    <fullName>Data_inicial__c</fullName>
    <label>Data inicial</label>
    <required>true</required>
    <type>Date</type>
</CustomField>