Financeiro/main/default/objects/Estimado__c/fields/Nome_agrupador__c.field-meta.xml
<CustomField>
    <fullName>Nome_agrupador__c</fullName>
    <formula>Agrupador__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome do agrupador</label>
    <type>Text</type>
</CustomField>