Financeiro/main/default/objects/Estimado__c/fields/Valor_previsto__c.field-meta.xml
<CustomField>
    <fullName>Valor_previsto__c</fullName>
    <label>Valor previsto</label>
    <precision>13</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>