Financeiro/main/default/objects/Estimado__c/fields/Valor_utilizado__c.field-meta.xml
<CustomField>
    <fullName>Valor_utilizado__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Valor calculado automaticamente</description>
    <inlineHelpText>Valor calculado automaticamente</inlineHelpText>
    <label>Valor utilizado</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>