Financeiro/main/default/objects/Estimado__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Agrupador__c</columns>
    <columns>Data_inicial__c</columns>
    <columns>Data_final__c</columns>
    <columns>Valor_previsto__c</columns>
    <columns>Valor_utilizado__c</columns>
    <columns>Saldo__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>